--- a/VacationPy.ipynb
+++ b/VacationPy.ipynb
@@ -181,7 +181,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6e889be2529c482e8b2521991dbd3661",
+       "model_id": "1a4e0c39f1b04f18804d953fd7a6024c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -221,7 +221,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6cbc993d72164e439bc93ef42da1edf3",
+       "model_id": "f2297d0ae8e44d40aa7e1739aaa4efd1",
        "version_major": 2,
        "version_minor": 0
       },
@@ -257,7 +257,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "bba6d324ff0e492a8af9be2ac7778628",
+       "model_id": "5aaeeed94a6c4838b9cffa2cbee19ad7",
        "version_major": 2,
        "version_minor": 0
       },
@@ -293,7 +293,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c5b4b17643634f9ba58d50400562a32e",
+       "model_id": "f9752f3233cf4c00893e7c67bd076d1c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -592,226 +592,9 @@
    "cell_type": "code",
    "execution_count": 11,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>City_ID</th>\n",
-       "      <th>City</th>\n",
-       "      <th>Country</th>\n",
-       "      <th>Date</th>\n",
-       "      <th>Lat</th>\n",
-       "      <th>Lng</th>\n",
-       "      <th>Max Temp</th>\n",
-       "      <th>Humidity</th>\n",
-       "      <th>Cloudiness</th>\n",
-       "      <th>Wind Speed</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>3</td>\n",
-       "      <td>Busselton</td>\n",
-       "      <td>AU</td>\n",
-       "      <td>2021-11-10 04:07:14</td>\n",
-       "      <td>-33.6500</td>\n",
-       "      <td>115.3333</td>\n",
-       "      <td>18.50</td>\n",
-       "      <td>43</td>\n",
-       "      <td>0</td>\n",
-       "      <td>3.47</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>5</td>\n",
-       "      <td>Avera</td>\n",
-       "      <td>US</td>\n",
-       "      <td>2021-11-10 04:07:15</td>\n",
-       "      <td>33.1940</td>\n",
-       "      <td>-82.5271</td>\n",
-       "      <td>15.93</td>\n",
-       "      <td>42</td>\n",
-       "      <td>90</td>\n",
-       "      <td>2.22</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>7</td>\n",
-       "      <td>Sao Mateus</td>\n",
-       "      <td>BR</td>\n",
-       "      <td>2021-11-10 04:07:16</td>\n",
-       "      <td>-18.7161</td>\n",
-       "      <td>-39.8589</td>\n",
-       "      <td>22.45</td>\n",
-       "      <td>94</td>\n",
-       "      <td>98</td>\n",
-       "      <td>0.94</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>15</th>\n",
-       "      <td>15</td>\n",
-       "      <td>Mataura</td>\n",
-       "      <td>NZ</td>\n",
-       "      <td>2021-11-10 04:07:19</td>\n",
-       "      <td>-46.1927</td>\n",
-       "      <td>168.8643</td>\n",
-       "      <td>15.00</td>\n",
-       "      <td>93</td>\n",
-       "      <td>100</td>\n",
-       "      <td>2.16</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>19</th>\n",
-       "      <td>19</td>\n",
-       "      <td>Myrtle Beach</td>\n",
-       "      <td>US</td>\n",
-       "      <td>2021-11-10 04:04:52</td>\n",
-       "      <td>33.6891</td>\n",
-       "      <td>-78.8867</td>\n",
-       "      <td>15.03</td>\n",
-       "      <td>74</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0.00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>531</th>\n",
-       "      <td>531</td>\n",
-       "      <td>Teguise</td>\n",
-       "      <td>ES</td>\n",
-       "      <td>2021-11-10 04:23:21</td>\n",
-       "      <td>29.0605</td>\n",
-       "      <td>-13.5640</td>\n",
-       "      <td>15.12</td>\n",
-       "      <td>77</td>\n",
-       "      <td>0</td>\n",
-       "      <td>3.09</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>532</th>\n",
-       "      <td>532</td>\n",
-       "      <td>Muroto</td>\n",
-       "      <td>JP</td>\n",
-       "      <td>2021-11-10 04:23:21</td>\n",
-       "      <td>33.2833</td>\n",
-       "      <td>134.1500</td>\n",
-       "      <td>18.02</td>\n",
-       "      <td>55</td>\n",
-       "      <td>16</td>\n",
-       "      <td>9.96</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>534</th>\n",
-       "      <td>534</td>\n",
-       "      <td>Deming</td>\n",
-       "      <td>US</td>\n",
-       "      <td>2021-11-10 04:23:23</td>\n",
-       "      <td>32.2687</td>\n",
-       "      <td>-107.7586</td>\n",
-       "      <td>17.36</td>\n",
-       "      <td>27</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2.06</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>549</th>\n",
-       "      <td>549</td>\n",
-       "      <td>Carmo Do Paranaiba</td>\n",
-       "      <td>BR</td>\n",
-       "      <td>2021-11-10 04:22:52</td>\n",
-       "      <td>-19.0008</td>\n",
-       "      <td>-46.3161</td>\n",
-       "      <td>18.86</td>\n",
-       "      <td>86</td>\n",
-       "      <td>99</td>\n",
-       "      <td>1.07</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>552</th>\n",
-       "      <td>552</td>\n",
-       "      <td>Moyale</td>\n",
-       "      <td>KE</td>\n",
-       "      <td>2021-11-10 04:23:32</td>\n",
-       "      <td>3.5167</td>\n",
-       "      <td>39.0584</td>\n",
-       "      <td>20.36</td>\n",
-       "      <td>70</td>\n",
-       "      <td>18</td>\n",
-       "      <td>2.58</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>140 rows × 10 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "     City_ID                City Country                 Date      Lat  \\\n",
-       "3          3           Busselton      AU  2021-11-10 04:07:14 -33.6500   \n",
-       "5          5               Avera      US  2021-11-10 04:07:15  33.1940   \n",
-       "7          7          Sao Mateus      BR  2021-11-10 04:07:16 -18.7161   \n",
-       "15        15             Mataura      NZ  2021-11-10 04:07:19 -46.1927   \n",
-       "19        19        Myrtle Beach      US  2021-11-10 04:04:52  33.6891   \n",
-       "..       ...                 ...     ...                  ...      ...   \n",
-       "531      531             Teguise      ES  2021-11-10 04:23:21  29.0605   \n",
-       "532      532              Muroto      JP  2021-11-10 04:23:21  33.2833   \n",
-       "534      534              Deming      US  2021-11-10 04:23:23  32.2687   \n",
-       "549      549  Carmo Do Paranaiba      BR  2021-11-10 04:22:52 -19.0008   \n",
-       "552      552              Moyale      KE  2021-11-10 04:23:32   3.5167   \n",
-       "\n",
-       "          Lng  Max Temp  Humidity  Cloudiness  Wind Speed  \n",
-       "3    115.3333     18.50        43           0        3.47  \n",
-       "5    -82.5271     15.93        42          90        2.22  \n",
-       "7    -39.8589     22.45        94          98        0.94  \n",
-       "15   168.8643     15.00        93         100        2.16  \n",
-       "19   -78.8867     15.03        74           1        0.00  \n",
-       "..        ...       ...       ...         ...         ...  \n",
-       "531  -13.5640     15.12        77           0        3.09  \n",
-       "532  134.1500     18.02        55          16        9.96  \n",
-       "534 -107.7586     17.36        27           1        2.06  \n",
-       "549  -46.3161     18.86        86          99        1.07  \n",
-       "552   39.0584     20.36        70          18        2.58  \n",
-       "\n",
-       "[140 rows x 10 columns]"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "preferred_cities_df.dropna()"
+    "preferred_cities_df = preferred_cities_df.dropna()"
    ]
   },
   {
@@ -1079,7 +862,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "37e8bc293b93498cb3d0ab830497489b",
+       "model_id": "0f574f27bb504ff094dec49d522ee502",
        "version_major": 2,
        "version_minor": 0
       },
